--- a/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
+++ b/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SocialMediaDashboard.Data\SocialMediaDashboard.Data.csproj" />
+    <ProjectReference Include="..\SocialMediaDashboard.Domain\SocialMediaDashboard.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
