--- a/src/SocialMediaDashboard.WebApp/ClientApp/package.json
+++ b/src/SocialMediaDashboard.WebApp/ClientApp/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^3.2.0",
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "2.3.0",
     "svgo": "1.3.0"
   },
@@ -37,6 +38,8 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "redux-devtools-extension": "^2.13.2",
     "typescript": "3.6.4"
   },
   "scripts": {
