--- a/src/SocialMediaDashboard.WebApp/ClientApp/package.json
+++ b/src/SocialMediaDashboard.WebApp/ClientApp/package.json
@@ -8,6 +8,7 @@
     "history": "4.10.1",
     "jquery": "^3.4.1",
     "merge": "1.2.1",
+    "node-sass": "^4.14.0",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
@@ -18,7 +19,6 @@
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "2.3.0",
     "svgo": "1.3.0"
   },
   "devDependencies": {
