--- a/src/SocialMediaDashboard.WebApp/ClientApp/package.json
+++ b/src/SocialMediaDashboard.WebApp/ClientApp/package.json
@@ -47,7 +47,8 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/**/*.ts ./src/**/*.tsx"
+    "lint": "eslint ./src/**/*.ts ./src/**/*.tsx",
+    "lint_fix": "eslint ./src/**/*.ts ./src/**/*.tsx --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
