feat: add basic implementation of JWT Token

--- a/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
+++ b/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SocialMediaDashboard.Data\SocialMediaDashboard.Data.csproj" />
   </ItemGroup>
 
