--- a/src/SocialMediaDashboard.WebAPI/appsettings.json
+++ b/src/SocialMediaDashboard.WebAPI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SocialMediaDashboardApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "AppSettings": {
+    "Secret": "3ce1637ed40041cd94d4853d3e766c4d"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
