--- a/src/SocialMediaDashboard.WebAPI/appsettings.json
+++ b/src/SocialMediaDashboard.WebAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SocialMediaDashboardApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=db;Database=SocialMediaDashboardApp;User=sa;Password=Your_password123;Trusted_Connection=False;MultipleActiveResultSets=true",
+    "SQLiteConnection": "Filename=SocialMediaDashboardApp.db"
   },
   "AppSettings": {
     "Secret": "3ce1637ed40041cd94d4853d3e766c4d"
