fix: update .gitignore file

--- a/src/SocialMediaDashboard.WebAPI/appsettings.json
+++ b/src/SocialMediaDashboard.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=SocialMediaDashboardApp;User=sa;Password=Your_password123;Trusted_Connection=False;MultipleActiveResultSets=true",
+    "MSSQLConnection": "Server=db;Database=SocialMediaDashboardApp;User=sa;Password=Your_password123;Trusted_Connection=False;MultipleActiveResultSets=true",
     "SQLiteConnection": "Filename=SocialMediaDashboardApp.db"
   },
   "AppSettings": {
