feat: add api routes constants class and project reference

--- a/src/SocialMediaDashboard.WebAPI/SocialMediaDashboard.WebAPI.csproj
+++ b/src/SocialMediaDashboard.WebAPI/SocialMediaDashboard.WebAPI.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SocialMediaDashboard.Common\SocialMediaDashboard.Common.csproj" />
     <ProjectReference Include="..\SocialMediaDashboard.Logic\SocialMediaDashboard.Logic.csproj" />
   </ItemGroup>
 
