--- a/src/SocialMediaDashboard.WebAPI/appsettings.json
+++ b/src/SocialMediaDashboard.WebAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MSSQLConnection": "Server=db;Database=SocialMediaDashboardApp;User=sa;Password=Your_password123;Trusted_Connection=False;MultipleActiveResultSets=true",
+    "MSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=SocialMediaDashboardApp;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DockerConnection": "Server=db;Database=SocialMediaDashboardApp;User=sa;Password=Your_password123;Trusted_Connection=False;MultipleActiveResultSets=true",
     "SQLiteConnection": "Filename=SocialMediaDashboardApp.db"
   },
   "AppSettings": {
