--- a/src/SocialMediaDashboard.Data/SocialMediaDashboard.Data.csproj
+++ b/src/SocialMediaDashboard.Data/SocialMediaDashboard.Data.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200518175808_Init.cs" />
     <Compile Remove="Migrations\20200518175808_Init.Designer.cs" />
+    <Compile Remove="Migrations\20200518181249_Initial.cs" />
+    <Compile Remove="Migrations\20200518181249_Initial.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
