--- a/src/SocialMediaDashboard.WebAPI/SocialMediaDashboard.WebAPI.csproj
+++ b/src/SocialMediaDashboard.WebAPI/SocialMediaDashboard.WebAPI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
