--- a/src/SocialMediaDashboard.Domain/SocialMediaDashboard.Domain.csproj
+++ b/src/SocialMediaDashboard.Domain/SocialMediaDashboard.Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SocialMediaDashboard.Common\SocialMediaDashboard.Common.csproj" />
   </ItemGroup>
 
