--- a/src/SocialMediaDashboard.WebAPI/appsettings.json
+++ b/src/SocialMediaDashboard.WebAPI/appsettings.json
@@ -5,7 +5,8 @@
     "SQLiteConnection": "Filename=SocialMediaDashboardApp.db"
   },
   "AppSettings": {
-    "Secret": "3ce1637ed40041cd94d4853d3e766c4d"
+    "Secret": "3ce1637ed40041cd94d4853d3e766c4d",
+    "TokenLifetime":  "00:00:45"
   },
   "AllowedHosts": "*"
 }
