--- a/src/SocialMediaDashboard.WebAPI/appsettings.json
+++ b/src/SocialMediaDashboard.WebAPI/appsettings.json
@@ -4,7 +4,7 @@
     "DockerConnection": "Server=db;Database=SocialMediaDashboardApp;User=sa;Password=Your_password123;Trusted_Connection=False;MultipleActiveResultSets=true",
     "SQLiteConnection": "Filename=SocialMediaDashboardApp.db"
   },
-  "AppSettings": {
+  "JwtSettings": {
     "Secret": "3ce1637ed40041cd94d4853d3e766c4d",
     "TokenLifetime":  "00:00:45"
   },
