--- a/src/SocialMediaDashboard.Data/SocialMediaDashboard.Data.csproj
+++ b/src/SocialMediaDashboard.Data/SocialMediaDashboard.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200521161019_AddRefreshTokenTable.cs" />
+    <Compile Remove="Migrations\20200521161019_AddRefreshTokenTable.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" />
