feat: add resource file for literals

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,8 +16,8 @@ dotnet_diagnostic.CA1052.severity = none
 # CA1031: Do not catch general exception types
 dotnet_diagnostic.CA1031.severity = none
 
-# CA1822: Mark members as static
-dotnet_diagnostic.CA1822.severity = none
+# CA1822: Mark assemblies with NeutralResourcesLanguageAttribute
+dotnet_diagnostic.CA1824.severity = none
 
 # CA1724: Type names should not match namespaces
 dotnet_diagnostic.CA1724.severity = none
