feat: add vk service for get user followers

--- a/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
+++ b/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
@@ -10,6 +10,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1" />
+    <PackageReference Include="VkNet" Version="1.53.0" />
   </ItemGroup>
 
   <ItemGroup>
