--- a/.editorconfig
+++ b/.editorconfig
@@ -25,5 +25,8 @@ dotnet_diagnostic.CA1724.severity = none
 # CA1034: Nested types should not be visible
 dotnet_diagnostic.CA1034.severity = none
 
+# CA2000: Dispose objects before losing scope
+dotnet_diagnostic.CA2000.severity = none
+
 [*.xml]
 indent_style = space
