--- a/src/SocialMediaDashboard.Common/SocialMediaDashboard.Common.csproj
+++ b/src/SocialMediaDashboard.Common/SocialMediaDashboard.Common.csproj
@@ -20,12 +20,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Identity.resx</DependentUpon>
     </Compile>
+    <Compile Update="Resources\Media.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Media.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="Resources\Identity.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Identity.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Media.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Media.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
