--- a/src/SocialMediaDashboard.Data/SocialMediaDashboard.Data.csproj
+++ b/src/SocialMediaDashboard.Data/SocialMediaDashboard.Data.csproj
@@ -9,6 +9,8 @@
     <Compile Remove="Migrations\20200521161019_AddRefreshTokenTable.Designer.cs" />
     <Compile Remove="Migrations\20200703161540_UpdateMediaAndStatisticTables.cs" />
     <Compile Remove="Migrations\20200703161540_UpdateMediaAndStatisticTables.Designer.cs" />
+    <Compile Remove="Migrations\20200704112711_RenameMediaToAccountTable.cs" />
+    <Compile Remove="Migrations\20200704112711_RenameMediaToAccountTable.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
