--- a/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
+++ b/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Coravel" Version="3.6.1" />
+    <PackageReference Include="InstagramApiSharp" Version="1.5.0.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
