--- a/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
+++ b/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Logic.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Coravel" Version="3.6.1" />
+    <PackageReference Include="Flurl" Version="2.8.2" />
+    <PackageReference Include="Flurl.Http" Version="2.4.2" />
     <PackageReference Include="InstagramApiSharp" Version="1.5.0.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
       <PrivateAssets>all</PrivateAssets>
