fix: fixed many TODOs

--- a/src/SocialMediaDashboard.Domain/SocialMediaDashboard.Domain.csproj
+++ b/src/SocialMediaDashboard.Domain/SocialMediaDashboard.Domain.csproj
@@ -60,7 +60,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\ObservationResource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ObservationResource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\PlatformResource.resx">
