--- a/.editorconfig
+++ b/.editorconfig
@@ -28,6 +28,9 @@ dotnet_diagnostic.CA1034.severity = none
 # CA2000: Dispose objects before losing scope
 dotnet_diagnostic.CA2000.severity = none
 
+# CA1819: Properties should not return arrays
+dotnet_diagnostic.CA1819.severity = none
+
 [*.xml]
 indent_style = space
 
