--- a/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Infrastructure.csproj
+++ b/src/SocialMediaDashboard.Logic/SocialMediaDashboard.Infrastructure.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Flurl.Http" Version="2.4.2" />
     <PackageReference Include="InstagramApiSharp" Version="1.5.0.1" />
     <PackageReference Include="MailKit" Version="2.9.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
