--- a/.editorconfig
+++ b/.editorconfig
@@ -34,7 +34,11 @@ dotnet_diagnostic.CA1819.severity = none
 [*.xml]
 indent_style = space
 
-[YouTubeResult.cs]
+[YouTubeResult.cs] 
+# CA2227: Collection properties should be read only
+dotnet_diagnostic.CA2227.severity = none
+
+[SuccessfulResponse.cs]
 # CA2227: Collection properties should be read only
 dotnet_diagnostic.CA2227.severity = none
 
