refactor: rename folder *.Logic -> *.Infrastructure

--- a/src/SocialMediaDashboard.Web/SocialMediaDashboard.Web.csproj
+++ b/src/SocialMediaDashboard.Web/SocialMediaDashboard.Web.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SocialMediaDashboard.Logic\SocialMediaDashboard.Infrastructure.csproj" />
+    <ProjectReference Include="..\SocialMediaDashboard.Infrastructure\SocialMediaDashboard.Infrastructure.csproj" />
   </ItemGroup>
 
 
